# gitops-for-poetry

./: .gitignore  .pre-commit-config.yaml  README.md
10_app/poetry-ai/: Dockerfile  Dockerfile.basic  Dockerfile.optimized  Taskfile.yml  config.ini  pyproject.toml
10_app/poetry-ai/poetry_ai/: main.py
20_helm/: Chart.yaml  values.yaml
20_helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
30_argocd/: Taskfile.yml  app.yaml
